--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "react-scripts": "1.1.4"
   },
   "dependencies": {
+    "@material-ui/core": "^1.0.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0"
   },
