--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "client": "cd client && npm start",
     "server": "nodemon server.js",
-    "dev":
-      "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
+    "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "concurrently": "^3.5.1",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "mongodb": "^3.1.0-beta4"
   }
 }
