--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,10 @@
   "dependencies": {
     "@material-ui/core": "^1.0.0",
     "@material-ui/icons": "^1.0.0",
+    "formik": "^0.11.11",
     "react": "^16.4.0",
-    "react-dom": "^16.4.0"
+    "react-dom": "^16.4.0",
+    "redux": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
