--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "body-parser": "^1.18.3",
     "concurrently": "^3.5.1",
     "express": "^4.16.3",
-    "mongodb": "^3.1.0-beta4"
+    "jsonwebtoken": "^8.2.2",
+    "mongodb": "^3.1.0-beta4",
+    "mongoose": "^5.1.3"
   }
 }
