--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,9 @@
     "formik": "^0.11.11",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
-    "redux": "^4.0.0"
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "redux-immutable-state-invariant": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
